remove all 'tree-level' analyses to supplementary

--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -57,7 +57,7 @@ To enable plot-level characterisation of tree traits as continuous variables, we
 
 ### Differences in lichen diversity among sites
 
-Permutational analysis of variance (PERANOVA) was used to test for differences in univariate lichen taxonomic and functional group richness, diversity and evenness measures (including distance-based functional diversity indices)^['Tree-level' data appears to be insufficient for calculating FRic and FDiv.] among the three sites. Differences in multivariate lichen community structure among sites were tested using permutational multivariate analysis of variance (PERMANOVA), separately for taxonomic and functional groups. Models included the factor 'site' (fixed, 3 levels: D, M and S), with a planned comparison (D, M) vs. S (i.e. undisturbed sites vs. disturbed site). 'Plot' (nested within site) was also included a random factor to account for potential non-independence of trees located within the same plot. Where a significant effect of 'site' was identified, pairwise permutational post-hoc tests were used to reveal differences between individual factor levels. Analyses involved 9,999 permutations of residuals under a reduced model, and tests were based on Type II Sums of Squares owing to unequal numbers of observations among groups.
+Permutational analysis of variance (PERANOVA)^[probability distributions are not really suitable for GLMMs, hence the use of PERANOVA. Another alternative is to use zero-inflated models.] was used to test for differences in univariate lichen taxonomic and functional group richness, diversity and evenness measures (including distance-based functional diversity indices)^['Tree-level' data appears to be insufficient for calculating FRic and FDiv.] among the three sites. Differences in multivariate lichen community structure among sites were tested using permutational multivariate analysis of variance (PERMANOVA), separately for taxonomic and functional groups. Models included the factor 'site' (fixed, 3 levels: D, M and S), with a planned comparison (D, M) vs. S (i.e. undisturbed sites vs. disturbed site). 'Plot' (nested within site) was also included a random factor to account for potential non-independence of trees located within the same plot. Where a significant effect of 'site' was identified, pairwise permutational post-hoc tests were used to reveal differences between individual factor levels. Analyses involved 9,999 permutations of residuals under a reduced model, and tests were based on Type II Sums of Squares owing to unequal numbers of observations among groups.
 
 To complement these unconstrained multivariate analyses, overall patterns in lichen community structure were visualised using non-metric multidimensional scaling (MDS) ordination plots, based on both taxonomic and functional groups.^[Although the MDS analyses (performed using the `metaMDS` function in the R package `vegan`) failed to 'converge' on a result and produced relatively high 2D stress values, they still serve as a useful representation of overall patterns -- to be interpreted with some caution. On the other hand, MDS converges successfully for summed 'plot-level' abundance data.]
 
